记录了Git遇到的问题，以及学习Nand2tetris写下的笔记

--- a/C/读C_Primer_Plus/C语言概述/示例解释.md
+++ b/C/读C_Primer_Plus/C语言概述/示例解释.md
@@ -94,3 +94,8 @@ C语言的名称区分大小写（变量名区分大小写）。为了让C更加
 
 例如：`num = 1;`
 在执行`int num`时，编译器在计算机内存总为变量`num`预留了空间，然后在执行上面那句赋值表达式语句时，把值存储在之前预留的位置。
+
+
+#### return语句
+
+强烈要求养成在`main()`函数保留`return`语句的好习惯，在这种情况下，可将其看作是统一代码风格。但对某些操作系统（包括Linux和UNIX），`return`语句有实际的用途。
